[package]
name = "sensorem"
version = "0.1.0"
edition = "2018"
description = "A colorful temperature sensor output"
repository = "https://github.com/zebp/sensorem"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
clap = "2.33.3"
colored = "2.0.0"
crossterm = "0.20.0"
sensors = "0.2.1"
